<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SoundHeap</string>
    <string name="record_title">Record</string>
    <string name="recording">Recording.</string>
    <string name="ready">Ready.</string>
    <string name="playback_title">Playback</string>
    <string name="project_title">Tracks</string>
    <string name="delete_action">Erase</string>
    <string name="send_action">Send Track</string>
    <string name="no_intent_to_send">No Program Available</string>
    <string name="open_action">Open Track</string>
    <string name="ignore_silence">Ignore Silence</string>
    <string name="new_file_on_silence">New File on Silence</string>
    <string name="pause_time">Silence Time</string>
    <string name="repository">/sdcard/soundheap/</string>
    <string name="share">Share</string>
    <string name="previous">Previous</string>
    <string name="rewind">Rewind</string>
    <string name="next">Next</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="play_pause">Play/Pause</string>
    <string name="stop">Stop</string>
    <string name="about">About</string>
    <string name="default_file_prefix">soundheap</string>
    <string name="save_file_prefix">File Prefix</string>
    <string name="file_postfix">.(currentDate).ogg</string>
</resources>